# trade-study

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
docs/api/: design.md  io.md  pareto.md  protocols.md  runner.md  scoring.md  stacking.md  study.md  viz.md
docs/guide/: bayesian.md  cstr.md  monitoring.md  sklearn.md
docs/javascripts/: katex.js
examples/: bayesian_study.py  cstr_study.py  monitoring_study.py  sklearn_study.py
src/PACKAGE_NAME/: __init__.py
src/model_criticism/: __init__.py  design.py  io.py  pareto.py  protocols.py  runner.py  scoring.py  stacking.py  study.py
src/trade_study/: __init__.py  _pareto.py  _scoring.py  design.py  protocols.py  runner.py  scoring.py  stacking.py  study.py  viz.py
tests/: __init__.py  test_api.py  test_design.py  test_io.py  test_pareto.py  test_protocols.py  test_runner.py  test_scoring.py  test_smoke.py  test_stacking.py  test_study.py  test_viz.py
