[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-criticism"
version = "0.0.1"
description = "Observable-based model evaluation, Pareto optimization, and Bayesian stacking"
authors = [
  { name = "Joshua C. Macdonald", email = "jmacdo16@jh.edu" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.1",
  "pytest-cov>=6.0",
]
dev = [
  "mypy>=1.18",
  "ruff>=0.13",
  "pytest>=8.1",
  "pytest-cov>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "CPY001",
  "D203",
  "D212",
  "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
