[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-study"
version = "0.0.1"
description = "Multi-objective trade-study orchestration: scoring, Pareto optimization, and Bayesian stacking"
authors = [
  { name = "Joshua C. Macdonald", email = "jmacdo16@jh.edu" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
scoring = [
  "scoringrules>=0.8",
]
pareto = [
  "pymoo>=0.6",
]
stacking = [
  "arviz>=1.0",
  "scipy>=1.10",
]
design = [
  "pyDOE3>=1.5",
  "SALib>=1.5",
  "scipy>=1.10",
]
adaptive = [
  "optuna>=4.0",
]
parallel = [
  "joblib>=1.3",
]
all = [
  "trade-study[scoring,pareto,stacking,design,adaptive,parallel]",
]
test = [
  "pytest>=8.1",
  "pytest-cov>=6.0",
  "trade-study[all]",
]
dev = [
  "mypy>=1.18",
  "ruff>=0.13",
  "trade-study[test]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "CPY001",
  "D203",
  "D212",
  "PLC0415",
  "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ANN201", "ANN401", "ARG002", "D103", "INP001", "PLR6301", "S101"]
"src/trade_study/protocols.py" = ["ANN401"]

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
